# oaip_pr

./: Makefile  README.md  pyproject.toml
VD_games/: engine.py
VD_games/games/: calc.py  even.py  gsd.py  prime.py  progression.py
VD_games/scripts/: VD_brain_calc.py  VD_even.py  VD_gcd.py  VD_main.py  VD_prime.py  brain_calc.py  vd_progression.py
games_project_maximova.egg-info/: PKG-INFO  SOURCES.txt
