[project]
name = "games-project-maximova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["VD_games"]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[project.scripts]
VD-games = "VD_games.scripts.VD_main:main"
VD-even = "VD_games.scripts.VD_even:run_even_game"
VD-calc = "VD_games.scripts.VD_brain_calc:run_calc_game"
VD-gcd = "VD_games.scripts.VD_gcd:run_gcd_game"
VD-progression = "VD_games.scripts.vd_progression:run_progression_game"
VD-prime = "VD_games.scripts.VD_prime:run_prime_game"
